# PaddleOCR-ncnn

./: CMakeLists.txt  README.md
cmake/: ppocrConfig.cmake.in
external-cmake/: auto-log.cmake
include/: ocr_cls.h  ocr_det.h  ocr_rec.h  paddleocr.h  postprocess_op.h  preprocess_op.h  utility.h
src/: clipper.cpp  ocr_cls.cpp  ocr_det.cpp  ocr_rec.cpp  paddleocr.cpp  postprocess_op.cpp  preprocess_op.cpp  utility.cpp
